--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@playwright/test": "^1.25.0",
     "@types/jquery": "^3.5.14",
     "@types/node": "^18.7.13",
